<resources>
    <string name="app_name">Love2048</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_name2">Love&amp;2048</string>
    <string name="title_activity_login"> 2048</string>
    <string name="title_activity_login2">ESPECIALLY FOR LONGLONG</string>
    <string name="action_settings">不要轻易放弃奥!</string>
    <string name="title2_activity_main"> Designed and developed by mawanli especially for longlong</string>
    <string name="title_activity_main">LOVE 2048</string>
    <string name="title_activity_rank">RankActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_theme_setting">设置游戏主题</string>
    <string name="card_setting_tag">点击卡片来设置卡片的背景</string>
    <string name="score">分数</string>
    <string name="high">最高</string>
    <string name="rank">排名</string>
    <string name="sound">游戏音效</string>
    <string name="music">背景音乐</string>
    <string name="mode">卡片模式</string>
    <string name="unlock">解锁</string>
    <string name="define">自定义</string>
    <string name="setting">设置</string>
    <string name="restart">重新开始</string>
    <string name="undo">回退</string>
    <string name="undo_number">回退</string>
    <string name="no">否</string>
    <string name="yes">是</string>
    <string name="reset">重置</string>
    <string name="save">保存</string>
    <string name="background_color">背景</string>
    <string name="one_step_each_time">只能回退一次奥 !</string>
    <string name="coins">积分</string>
    <string name="earn_more_coin">获得积分</string>
    <string name="exchange_undo">兑换</string>
    <string name="notice"> 每25积分可以兑换一次Undo(回退)\n您可以通过积分墙完成相应的任务来获得积分(点击Get More)\n每当您的游戏卡片最大数字达到2048时将获得100积分,达到4096获得200积分,达到8192获得500积分\n当积分达到1500时便可以解锁本游戏的完整版\nMeiZu用户还可以直接使用flyme账户赞助本游戏5元来解锁完整版\n完整版可使用所有功能,游戏界面更酷,可以自定义游戏的主题,还可以自定义数字卡片颜色,也可以将数字卡片设置成自己的照片,打造只属于您自己的 2048 游戏\n解锁完整版后,重新安装以及升级本游戏解锁永久有效</string>
    <string name="coin_unlock">积分解锁</string>
    <string name="flyme_unlock">Flyme赞助</string>
    <string name="full_version">获得完整版</string>
    <string name="number_1500">1500</string>
    <string name="number_5">  ¥5</string>
    <string name="rank_list">排行榜</string>
    <string name="title_activity_base">BaseActivity</string>
</resources>
