<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.mawanli.love2048.MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_bottom"
        android:background="@null"
        android:gravity="center"
        android:text="@string/setting"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text_size" />

    <LinearLayout
        android:id="@+id/setting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:background="@color/transparent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_bottom" >

        <LinearLayout
            android:id="@+id/sound_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null" >

            <TextView
                android:id="@+id/soundTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical|left"
                android:minEms="3"
                android:text="@string/sound"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <com.mawanli.love2048.view.ColorTextSwither
                android:id="@+id/soundButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="@null"
                android:gravity="center"
                android:inAnimation="@anim/score_in_animation"
                android:minEms="3"
                android:outAnimation="@anim/score_out_animation"
                android:textSize="16sp" >
            </com.mawanli.love2048.view.ColorTextSwither>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/music_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null" >

            <TextView
                android:id="@+id/musicTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical|left"
                android:minEms="3"
                android:text="@string/music"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <com.mawanli.love2048.view.ColorTextSwither
                android:id="@+id/musicButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="@null"
                android:gravity="center"
                android:inAnimation="@anim/score_in_animation"
                android:minEms="3"
                android:outAnimation="@anim/score_out_animation"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mode_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null" >

            <TextView
                android:id="@+id/modeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical|left"
                android:minEms="3"
                android:text="@string/mode"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <com.mawanli.love2048.view.ColorTextSwither
                android:id="@+id/modeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="@null"
                android:gravity="center"
                android:inAnimation="@anim/score_in_animation"
                android:minEms="3"
                android:outAnimation="@anim/score_out_animation"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_layout"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingTop="5dp"
        android:visibility="invisible"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:text="@string/card_setting_tag" />

    <com.mawanli.love2048.view.SettingGameView
        android:id="@+id/setting_game_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_margin="10dp"
        android:background="@null"
        android:columnCount="4"
        android:rowCount="4" >
    </com.mawanli.love2048.view.SettingGameView>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingBottom="35dp"
        android:paddingRight="15dp" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left" >

            <com.mawanli.love2048.view.WhiteColorButton
                android:id="@+id/button1"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:background="@drawable/white_button_selector"
                android:gravity="center"
                android:text="@string/reset"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >

            <com.mawanli.love2048.view.WhiteColorButton
                android:id="@+id/theme_color_button"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/white_button_selector"
                android:gravity="center"
                android:text="@string/background_color"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right" >

            <com.mawanli.love2048.view.WhiteColorButton
                android:id="@+id/button2"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:background="@drawable/white_button_selector"
                android:gravity="center"
                android:text="保存"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>